ocp/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kcb-apache-kafka
spec:
  selector:
    app: myApp
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
