ocp/app-sroutes.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: myApp
spec:
  to:
    kind: Service
    name: myApp
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDvDCCAqQCCQDf0wrwZ4ho2DANBgkqhkiG9w0BAQsFADCBnzELMAkGA1UEBhMC
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDOWF5sb4Y42HmN
[...]
      SF2HbYreoKTkxG4W0Wy8ViOLfg==
      -----END PRIVATE KEY-----
  wildcardPolicy: None
